# tauri-control-centre

./: README.md  install.sh
docs/: TESTING.md
niri/: window-rules.kdl
scripts/: control-centre
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md
src-tauri/src/: commands.rs  error.rs  main.rs  main_old.rs  state.rs
src-tauri/tests/: integration_tests.rs
ui/: app.js  app.test.js  index.html  styles.css
waybar/: module.json
